<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreenActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAutofill="no"
                tools:hint="@string/login"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="25dp"
                android:textStyle="bold"/>


            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:hint="@string/password"
                android:textColorHint="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:inputType="textPassword"
                tools:ignore="WearPasswordInput" />


            <Button
                android:id="@+id/btnLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_btn_login"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:layout_marginTop="25dp"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>